laborations/lab2/testsuite/good/subtyping/div_double_rhs.cc
int main() {
  printDouble(1 / 2.0);
  return 0;
}
