laborations/lab2/testsuite/bad/cmp-while-double-eq-bool.cc
// Compare double with boolean.

int main() {
  while (2.0 == true) {
	  return 1;
  }
  return 0 ;
}
